--- a/index.html
+++ b/index.html
@@ -10,29 +10,32 @@
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Diya Biju</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="RESUME.pdf">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>  <!-- Fixed linking issue -->
-                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/diyabiju27">LinkedIn</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.behance.net/diyabiju27">Behance</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
+   <!-- Navigation Bar -->
+   <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container">
+        <a class="navbar-brand" href="#">Diya Biju</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="RESUME.pdf" target="_blank">Resume</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/diyabiju27" target="_blank">LinkedIn</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://www.behance.net/diyabiju27" target="_blank">Behance</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>            
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <section class="hero">
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="container text-center">
         <h1 class="hero-title">Diya's Portfolio</h1>
-    </section>
+        <p class="hero-subtitle">Creative Designer | UI/UX Enthusiast </p>
+    </div>
+</section>
 
     <section class="about">
         <div class="container">
@@ -116,3 +119,4 @@
 
 </body>
 </html>
+
